<resources>
    <string name="app_name">PortaventuraWorld</string>

    <string name="hotels_title">Hotels</string>
    <string name="events_title">Events</string>
    <string name="tendes_title">Tendes</string>
    <string name="transport_title">Transport</string>
    <string name="restaurants_title">Restaurants</string>
    <string name="atraccions_title">Atraccions</string>

    <string name="hCreek_desc">Amb accés directe al parc per l àrea de Far West, al nostre hotel ambientat al llunyà Oest podràs reviure la febre de l or.</string>
    <string name="hRiver_desc">Amb accés directe al parc per l àrea de Far West, en aquest hotel podràs sentir-te com un autèntic texà al més pur estil llunyà Oest</string>
    <string name="hLucy_desc">Amb accés directe al parc per l àrea de Far West, aquest hotel us submergirà al luxe de l època victoriana del llunyà Oest.</string>
    <string name="hPort_desc">Amb accés directe al parc per l àrea de Mediterrània, aquest hotel us traslladarà a un encantador llogaret de pescadors.</string>
    <string name="hCaribe_desc">Un oasi tropical que us traslladarà al Carib més pur, amb platges espectaculars i l ambient més càlid.</string>
    <string name="hPaso_desc">Aquest hotel us enlluernarà pels seus espectaculars jardins, el seu exotisme i la bellesa d una hisenda tradicional mexicana d estil colonial.</string>
    <string name="hVila_desc">Gaudeix de l experiència a Hotel Vila Centric i allotja t a prop de tot. Situat a pocs minuts de PortAventura World i de la platja.</string>
    <string name="hPiramide">Gaudeix de les teves vacances en família o en parella en aquest modern hotel recentment renovat, amb una decoració al més pur estil mediterrani i situat a 600 metres de la platja de Salou.</string>

    <string name="BusTitol">Des de bus</string>
    <string name="TextBusCostaDaurada">Des de la Costa Daurada la companyia Plana ofereix servei diari que uneix les poblacions de la zona amb el nostre parc</string>
    <string name="TextBusCostaBrava">Des de Moventis pots demanar bus amb la entrada conjuntament</string>
    <string name="TextBusBcn">Julià Travel ofereix multiples excursions des de Barcelona amb una oferta de Bus + entrada amb un 10% de descompte </string>
    <string name="TrenTitol">Des de Tren</string>
    <string name="TrenCat"> resort disposa d una parada a PortAventura World, integrada a la línia R-17 i RT2 de Rodalies de Catalunya. Si vens des de tren el billet de tren d anada i tornada es gratuita</string>
    <string name="TrenESP"> Disposem de trens de mitja distància des de València i d alta velocitat (AVE) i llarga distància des de qualsevol punt de la Península perquè puguis arribar al resort de la manera més còmoda.</string>

    <string name="eCarnaval_desc">T imagines arribar a un teatre i, de sobte, trobar-te dins del Carnaval de Venècia? Doncs això és precisament el que et trobaràs al Gran Teatre Imperial de la Xina.</string>
    <string name="eMaya_desc">Un equip d exploradors buscant un gran tresor vulnera un temple maia, desencadena la ira dels déus i provoca un apocalipsi en què només sobreviuran els aventurers més valents. Recorre diferents entorns on apareixeran tota mena de monstres per intentar convertir-te en un. Hauràs d esquivar diversos perills si vols escapar d aquesta zona maleïda.</string>
    <string name="eHwFactory_desc">Fantasmes, morts vivents, dimonis i altres éssers del més enllà treuen el costat més artístic per regalar-te una experiència plena de coreografies, composicions i cançons que et deixaran amb la boca oberta i et faran cridar de sorpresa.</string>
    <string name="eBubble_desc">Durant aquest Nadal, el nostre alquimista es deixa posseir per l esperit nadalenc i s ho passa d allò més bé creant bombolles increïbles amb tan sols una mica d aigua, sabó i molta imaginació!</string>
    <string name="eXmasParade_desc">L?alegria nadalenca desfila per l?àrea de Mediterrània de PortAventura Park. En acabar el dia, els personatges del parc surten al carrer per mostrar-te les seves magnífiques carrosses i felicitar-te el Nadal.</string>
    <string name="eDestDance_desc">El Gran Teatre Imperial de la Xina es vesteix de gala i us obre les portes perquè gaudiu d un espectacle ple de música, ritme i color. Un viatge a través del món de la dansa. Un espectacle increïble, ple de balls, acrobàcies i la millor música. Tres fantàstiques veus i increïbles acròbates conduiran aquest espectacle musical de gran format.</string>
    <string name="eFiestAv_desc">Estàs a punt d abandonar el parc però encara queda un últim xou: Un màgic espectacle multimèdia que combina aigua amb foc, llum i so, i que inclou efectes especials de pirotècnia que et sorprendran i et trauran un somriure mentre admires la magnífica posada en escena sobre l´aigua del llac de Mediterrània.</string>

    <string-array name="tipus_restaurants">
        <item>Tots els restaurants</item>
        <item>Mediterrània</item>
        <item>Polynesia</item>
        <item>SésamoAventura</item>
        <item>Xina</item>
        <item>Mèxic</item>
        <item>Far West</item>
    </string-array>

    <string-array name="estrellas_hotels">
        <item>Tots els hotels</item>
        <item>4 estrelles</item>
        <item>5 estrelles</item>
    </string-array>

    <string-array name="tipus_event">
        <item>Tots els events</item>
        <item>Nadal</item>
        <item>Setmana Santa</item>
        <item>Estiu</item>
        <item>Halloween</item>
        <item>Carnaval</item>
    </string-array>


</resources>